--- a/CustomerManagement.WPF/Views/AddPurchaseWindow.xaml
+++ b/CustomerManagement.WPF/Views/AddPurchaseWindow.xaml
@@ -6,7 +6,8 @@
         Height="670" 
         Width="600"
         WindowStartupLocation="CenterOwner"
-        ResizeMode="NoResize">
+        ResizeMode="NoResize"
+        Icon="/Assets/CustomerManager.ico">
 
     <Window.Resources>
         <converters:CurrencyConverter x:Key="CurrencyConverter"/>
